# purl

./: .hlint.yaml  LICENSE  README.md  flake.nix  purl.cabal
.github/workflows/: ci.yaml  update-flake-lock.yaml
src/: Purl.hs
test/: ParseSpec.hs
